# resume-builder

./: .gitignore  docker-compose.yml  pyproject.toml
docs/: Overview.md  backend.md  frontend.md  setup.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ChatPanel.tsx  MarkdownPreview.tsx  UploadDialog.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/services/: api.ts
frontend/src/theme/: theme.ts
src/: main.py
src/agents/: agent.py
src/agents/models/: states.py
src/backend/: main.py
src/backend/api/: routes.py
src/backend/services/: tailoring_service.py
src/backend/websockets/: connection_manager.py
src/config/: settings.py
src/utils/: job_scraper.py  logger_config.py  parse_pdf.py
